Remove XML dependencies